# haskell-opencv-work

./: ApproxPolyDP.hs  RamerDouglasPeuckerParts.hs  rdp1.py  rdp1.py~  simple.cabal  simple.cabal~  stack.yaml  stack.yaml~  test.hs  test2.hs
.stack-work/install/x86_64-linux/lts-6.17/7.10.3/flag-cache/: QuickCheck-2.8.2-41e0a885d5f2f364641f2384fe2e5568  StateVar-1.1.0.4-c870ecc28adfa9764b145a54f6a2c147  adjunctions-4.3-7fa2c0a23dee95e16b6d10bfc5252367  aeson-0.11.2.1-625e2c51be7127dd71b1dee910c034a3  ansi-terminal-0.6.2.3-7b40b18f4e53e6f53c2ffd807e929ca9  ansi-wl-pprint-0.6.7.3-c624a14e647c937768855ca360a122b5  attoparsec-0.13.0.2-3c4b289474d55aef1ab5105f55134a86  base-orphans-0.5.4-80aa061a7fc1e4ab8c82be1540afd813  base64-bytestring-1.0.0.1-4aa13e7ac7c5b00cc0cd642708d4e148  bifunctors-5.2-0c3e1bee081eb17e20355791e41c1534  bindings-DSL-1.0.23-75369fdfdd50bafd3a7650315e217654  byteable-0.1.1-38069d1c3de6139ffc8d1d1e85b91030  bytes-0.15.2-e2cc7595ab07a3f6393d228ee090c163  cereal-0.5.2.0-7ea4e72fb8e66bdc3b019357750acbe1  charset-0.3.7.1-54b99abb43d6f0521b09f700034d932b  comonad-4.2.7.2-65ab00e4a66fb76d0d960e50e8c2fe23  contravariant-1.4-c7f1db7ed5e306ce8b515448c54e20b6  cryptohash-0.11.9-0ba3244998e172713623e5b031b43ab8  cryptonite-0.19-88a402e2f6983fc62151ee1a12dc1dea  distributive-0.5.0.2-393a023f71dc3cd11f1fef5933233cdf  dlist-0.7.1.2-ff29ea897ce0546ab24638745f33b7b9  exceptions-0.8.3-d4f6a36a62bf146f0a4221b7c358d663  fail-4.9.0.0-dd8812a5b6b0a0ce790ee5a93be03a9d  free-4.12.4-d93107ffa97b676c2834a84294288dcd  hashable-1.2.4.0-2f6e980fdeff3f16111d43036e99487a  inline-c-0.5.5.7-5f3e26ccb43549fd13ee0ee6e04f2780  inline-c-cpp-0.1.0.0-e09671f035807941430efc3a628c5c8d  kan-extensions-4.2.3-d868773b5e156c0ccd28da371d938e9c  lens-4.13-194d158eeb8a0ffd6c5a7a5e3713547a  linear-1.20.5-fe8acee2e6b7b9e9306351cb9ff33212  memory-0.13-f7f6527c0721c2b55b50c9a67588b20d  mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  mwc-random-0.13.4.0-cef2fb726129a73b2c520806a3ad5591  nat-0.3-037267709fb58f16bc3c84031dcc094b  opencv-0.0.0-3f74a6eaf1332c3210acca0398786ed0  parallel-3.2.1.0-13fa56575e4752a542f0b618706881f7  parsec-3.1.11-9fbeb486b9422a628611bfda22e15367  parsers-0.12.4-6f77e5aaeef1a7dc286961c3c9350597  prelude-extras-0.4.0.3-35d27727606bcd0bcd2c3491f65bf5b7  primitive-0.6.1.0-b2a7b9f8d5591c0d4ce7ef238a3217d2  (+25 more)
.stack-work/install/x86_64-linux/lts-6.17/7.10.3/pkgdb/: nat-0.3-037267709fb58f16bc3c84031dcc094b.conf  opencv-0.0.0-3f74a6eaf1332c3210acca0398786ed0.conf  package.cache  simple-0.1.0.0-204bce9b11d37b1829c1a2aafcba919c.conf  simple-0.1.0.0-53c70597538e0a11914dbbb904c147e1.conf  simple-0.1.0.0-7f150e86dd1a4bb70dbf6d35d1515570.conf  simple-0.1.0.0-9ae0e70e7cc5c355aba7f437faff48b9.conf  simple-0.1.0.0-adedbdf587ad470e69e3a1d5710af404.conf  simple-0.1.0.0-e1104f74105a38760da5ab4c7a498413.conf  simple-0.1.0.0-e94827096f17cdabb657a6cdaab36cfd.conf
.stack-work/install/x86_64-linux/lts-7.0/8.0.1/flag-cache/: QuickCheck-2.8.2-B7cXgOk7OAiKrNRsk2SfuA  (+55 more)
app/: Main.hs
src/: ApproxPolyDP.hs  BlurImage.hs  CannyImage.hs  ConvexHull.hs  CropImage.hs~  FindContours.hs  Lib.hs  Lib.hs~  RamerDouglasPeuckerParts.hs  ResizeImage.hs  RightReceipt.hs  Utils.hs
(+337 files in other folders)
