name:                simple
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-extensions:  BangPatterns
                       DataKinds
                       LambdaCase
                       OverloadedStrings
                       PackageImports
                       PolyKinds
                       ScopedTypeVariables
                       TupleSections
                       TypeFamilies
                       TypeOperators
  exposed-modules:     Lib
                     , CannyImage
                     , ConvexHull
                     , FindContours
                     , BlurImage
                     , ResizeImage
                     , RightReceipt
                     , Utils
                     , ApproxPolyDP
                     , RamerDouglasPeuckerParts
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , opencv
                     , containers
                     , nat
                     , bytestring
                     , linear
                     , primitive
                     , vector
                     , vector-algorithms
                     , transformers
  default-language:    Haskell2010

executable simple-exe
  hs-source-dirs:      app
  default-extensions:  BangPatterns
                       DataKinds
                       LambdaCase
                       OverloadedStrings
                       PackageImports
                       PolyKinds
                       ScopedTypeVariables
                       TupleSections
                       TypeFamilies
                       TypeOperators
  main-is:             Main.hs
 -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple
                     , opencv
                     , containers
                     , bytestring
                     , primitive
                     , vector
                     , vector-algorithms
                     , linear
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple
                     , opencv
                     , containers
                     , bytestring
                     , primitive
                     , vector
                     , vector-algorithms
                     , linear
 -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple
